# esp32_peripheral_test

./: CMakeLists.txt  Makefile  README.md  sdkconfig
components/dns_server/: CMakeLists.txt  dns_server.c  dns_server.h
components/font6x8/: CMakeLists.txt
components/qrcodegen/: CMakeLists.txt
components/ssd1306/: CMakeLists.txt  ssd1306.c  ssd1306.h
main/: CMakeLists.txt  component.mk  peripheral_test.c
main/include/: wifi_creds.h
static_data/: private.key  server.crt
